# ZirconOS

./: .gitignore  Cargo.toml  Makefile  build.rs  run.sh
boot/grub/: grub.cfg
fsdir/: test.txt
include/arch/i686/: cpu_brand.h  gdt.h  idt.h  io.h  irq.h  isr.h  memory.h  multiboot.h  pic.h  pmm_stats.h
include/arch/i686/drivers/: i8259.h  ide.h  keyboard.h
include/arch/i686/mm/: memory.h  paging.h
include/kernel/: dev_tty.h  fd.h  kinit.h  kmalloc.h  shell.h  sleep.h  tty.h  vga.h
include/libk/: stdio.h  stdlib.h  string.h  unistd.h
include/util/: array.h  ceil.h  hex.h
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs  tty.rs
link/: i686.ld
src/arch/i686/: boot.asm  cpu_brand.c  gdt.c  idt.c  idt_asm.asm  irq.c  isr.c  isr_asm.asm  isr_gen.c  isr_irq_stubs.asm  memory.c  multiboot.c  multiboot2_header.c
src/arch/i686/drivers/: i8259.c  ide.c  keyboard.c
src/arch/i686/mm/: memory.c  paging.c
src/kernel/: dev_tty.c  fd.c  kinit.c  kmain.c  kmalloc.c  shell.c  sleep.c  ssp.c  tty.c
src/libk/: stdio.c  string.c
src/libk/stdio/: fprintf.c  fputs.c  printf.c  putchar.c  puts.c  vfprintf_fd.c
src/libk/stdlib/: strtoul.c
src/libk/string/: memory.c  string.c
src/libk/unistd/: close.c  dup.c  dup2.c  open.c  read.c  write.c
