[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
spin = { version = "0.10.0", features = ["mutex"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
font8x8 = { version = "0.3.1", default-features = false }
bootloader_api = "0.11.11"
